--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/bootstrap.css">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Rest countries</title>
+  <title>Todo list</title>
 </head>
 <body>
 <header id="main-header" class="bg-success text-white p-4 mb-3">
